--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body style="background-color: pink;">
     {{>header}}
     <p>Use this site to fulfill your need and requirement as well !!!</p>
     <div class="main-content">
