--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="background-color: pink;">
+<body style="background-color: pink;" font-size="64px;">
     {{>header}}
     <p>Use this site to fulfill your need and requirement as well !!!</p>
     <div class="main-content">
