--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -11,6 +11,20 @@
     <div class="main-content">
         {{>header}}
         <p>{{errorMessage}}</p>
+       
+    <div class="about-section">
+        <h2>Who We Are</h2>
+        <p>We are here to help people find out their needs at a specific point in time. Our goal is to provide assistance and solutions to individuals facing challenges in identifying and fulfilling their requirements.</p>
+    </div>
+    <div class="about-section">
+        <h2>Our Mission</h2>
+        <p>We aim to provide a platform where individuals can easily identify and address their immediate needs, whether it's finding essential services, seeking assistance, or connecting with relevant resources. </p>
+    </div>
+    <div class="about-section">
+        <h2>Our Team</h2>
+        <p>Through this initiative, we strive to foster a stronger sense of community support and empowerment, facilitating access to crucial information and services for all members of our community.</p>
+    </div>
+
 
 
     </div>
