--- a/template/views/data.hbs
+++ b/template/views/data.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Requirement</title>
+    <title>Data</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/feather.jpeg">
 </head>
@@ -11,8 +11,10 @@
     <div class="main-content">
         {{>header}}
         <p>{{helpText}}</p>
-
-
+        <center>
+            <p>Data saved Successfully!</p>
+            <p>{{user}}, we will contact you soon at {{userMobile}}</p>
+        </center>
     </div>
     {{>footer}}
 </body>
