--- a/template/partials/footer.hbs
+++ b/template/partials/footer.hbs
@@ -1,3 +1,4 @@
 <footer>
-    <p>Created by {{name}}</p>
+    <p>Design and Developed by {{name}}</p>
+    <p>Copyright &copy; 2024. All rights reserved by Need it.</p>
 </footer>
